more layout improvements to work better on smaller screens, see https://github.com/phetsims/quake/issues/10

--- a/www/css/haptics-playground.css
+++ b/www/css/haptics-playground.css
@@ -76,26 +76,15 @@ h2 {
   display: none; /* invisible until made visible by the JS code */
 }
 
-/* for smaller width displays */
+/* for smaller screens, primarily phones */
 @media screen and (max-width: 550px) {
-
-  /* Use more of the viewport on narrow screens.  This is primarily for phones versus tablets. */
   .app-screen {
-    max-width: 90vw;
+    max-width: 90vw; /* Use more of the viewport on smaller screens */
+    margin-top: 1vw; /* Use less margin so that more of the content will fit. */
   }
 }
 
-/* for smaller height displays */
-@media screen and (max-height: 800px) {
-
-  /* Use less margin at the top when there is less screen to work with */
-  .app {
-    margin-top: 1vh;
-  }
-
-}
-
-/* TEMPORARY! This is for showing screens on the Android emulator where the JS isn't running. */
+/* TODO: This is for showing screens on the Android emulator where the JS isn't running, remove eventually. */
 #patterns-screen {
   display: flex;
 }
